--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@gsap/react": "^2.1.1",
     "@material-tailwind/react": "^2.1.9",
+    "@tanstack/react-query": "^5.51.23",
     "axios": "^1.7.4",
     "firebase": "^10.12.5",
     "gsap": "^3.12.5",
